--- a/Inbox/Inbox/Base.lproj/MainMenu.xib
+++ b/Inbox/Inbox/Base.lproj/MainMenu.xib
@@ -323,21 +323,30 @@
                         </items>
                     </menu>
                 </menuItem>
-                <menuItem title="Help" id="wpr-3q-Mcd">
+                <menuItem title="Shortcuts" id="FRu-Gy-SqZ" userLabel="Shortcuts">
                     <modifierMask key="keyEquivalentModifierMask"/>
+                    <menu key="submenu" title="Shortcuts" systemMenu="window" id="7OY-yj-qEN">
+                        <items>
+                            <menuItem title="Reload" keyEquivalent="r" id="DoJ-Nb-AWg">
+                                <connections>
+                                    <action selector="reload:" target="-1" id="BcS-8f-xZm"/>
+                                </connections>
+                            </menuItem>
+                        </items>
+                    </menu>
                 </menuItem>
             </items>
         </menu>
         <window title="Inbox" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="746" height="487"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+            <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
+            <rect key="contentRect" x="335" y="390" width="1415" height="907"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="746" height="487"/>
+                <rect key="frame" x="0.0" y="1" width="1415" height="907"/>
                 <autoresizingMask key="autoresizingMask"/>
             </view>
-            <point key="canvasLocation" x="269" y="145.5"/>
+            <point key="canvasLocation" x="393.5" y="167.5"/>
         </window>
         <viewController id="fq0-rl-ocb" customClass="InboxViewController" customModule="Inbox" customModuleProvider="target">
             <connections>
